--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -135,11 +135,13 @@
     <p class="text-sm text-gray-600">A code has been sent to your email</p>
     
     <input
-      type="text"
-      maxlength="6"
-      placeholder="Enter Code"
-      class="w-full px-4 py-2 border rounded-full text-center text-sm focus:ring-2 focus:ring-blue-400"
-    />
+  type="text"
+  maxlength="6"
+  [(ngModel)]="enteredCode"
+  placeholder="Enter Code"
+  class="w-full px-4 py-2 border rounded-full text-center text-sm focus:ring-2 focus:ring-blue-400"
+/>
+
     <button
       (click)="onVerifyCode()"
       class="w-full py-2 bg-gradient-to-r from-blue-300 to-blue-500 text-white rounded-full hover:scale-105 transition"
